@@ -121,11 +121,10 @@ fi;							\
 TERM=$$__SAVED_TERM; export TERM;			\
 $(am__tty_colors);					\
 xfailed=PASS;						\
-for xfail in : $(XFAIL_TESTS); do			\
-  case $$f in						\
-    $$xfail | $(srcdir)/$$xfail) xfailed=XFAIL; break;	\
-  esac;							\
-done;							\
+case " $(XFAIL_TESTS) " in				\
+  *[\ \	]$$f[\ \	]* | *[\ \	]$$dir$$f[\ \	]*) \
+    xfailed=XFAIL;;					\
+esac;							\
 case $$estatus:$$xfailed in				\
     0:XFAIL) col=$$red; res=XPASS;;			\
     0:*)     col=$$grn; res=PASS ;;			\
