@@ -1,5 +1,11 @@
 2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Match XFAIL_TESTS correctly with Solaris make.
+	* lib/am/check.am [PARALLEL_TESTS]: VPATH rewriting may have
+	changed test names, so srcdir needs to be taken into account
+	explicitly when checking against the list of tests expected
+	to fail.  Fixes spurious FAILures from XFAIL_TESTS.
+
 	Use append mode to capture parallel test output.
 	* tests/lisp8.test: Use append mode for output from `make -j',
 	to avoid dropped lines.
